[gd_scene load_steps=49 format=2]

[ext_resource path="res://PCs/PC_elf.png" type="Texture" id=1]
[ext_resource path="res://Player_3/Player_3.gd" type="Script" id=2]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://white_color_shader.tres" type="Shader" id=6]
[ext_resource path="res://addons/github-integration/fonts/Roboto-Black.ttf" type="DynamicFontData" id=7]

[sub_resource type="ShaderMaterial" id=43]
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=34]
resource_name = "AttackUp"
length = 1.3
loop = true

[sub_resource type="Animation" id=7]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 130 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 117 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 143 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 104 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 104 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunDown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 130, 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=3]
resource_name = "RunLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RunRight"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 143, 143, 144, 145, 146, 147, 148, 149, 150 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunUp"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 104, 105, 106, 107, 108, 109, 110, 112 ]
}

[sub_resource type="Animation" id=32]
resource_name = "SpellcastingDown"
length = 1.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 26, 27, 28, 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=31]
resource_name = "SpellcastingLeft"
length = 1.3
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 13, 14, 15, 16, 18, 19 ]
}

[sub_resource type="Animation" id=33]
resource_name = "SpellcastingRight"
length = 1.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 39, 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=30]
resource_name = "SpellcastingUp"
length = 1.1
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 272, 99 )
states/Run/node = SubResource( 27 )
states/Run/position = Vector2( 595, 91 )
transitions = [ "Run", "Idle", SubResource( 28 ), "Idle", "Run", SubResource( 29 ) ]
start_node = "Idle"
graph_offset = Vector2( -70, 64 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="CapsuleShape2D" id=47]
radius = 4.0
height = 10.0

[sub_resource type="Theme" id=35]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.0980392, 0.882353, 0.0980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.74902, 0.909804, 0.494118, 0.490196 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
border_blend = true

[sub_resource type="Theme" id=39]

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.160784, 0.780392, 0.886275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.6, 0.6, 0.6, 0.470588 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.027451, 0.027451, 0.027451, 1 )
border_blend = true

[sub_resource type="Animation" id=46]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=44]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=45]
resource_name = "stop"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=48]
size = 5
outline_color = Color( 0.027451, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 7 )

[node name="Player_3" type="KinematicBody2D"]
position = Vector2( 32, 16 )
collision_layer = 2
collision_mask = 257
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 43 )
position = Vector2( 0, -7 )
scale = Vector2( 0.438838, 0.438838 )
texture = ExtResource( 1 )
hframes = 13
vframes = 21
frame = 104
region_rect = Rect2( -41.3491, -37.1463, 922.861, 1411.18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
anims/AttackUp = SubResource( 34 )
anims/IdleDown = SubResource( 7 )
anims/IdleLeft = SubResource( 9 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 10 )
anims/RESET = SubResource( 2 )
anims/RunDown = SubResource( 5 )
anims/RunLeft = SubResource( 3 )
anims/RunRight = SubResource( 6 )
anims/RunUp = SubResource( 4 )
anims/SpellcastingDown = SubResource( 32 )
anims/SpellcastingLeft = SubResource( 31 )
anims/SpellcastingRight = SubResource( 33 )
anims/SpellcastingUp = SubResource( 30 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 13 )
parameters/Idle/blend_position = Vector2( 0.00316954, 0.0104762 )
parameters/Run/blend_position = Vector2( 0.00384915, 0.836207 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -7 )
scale = Vector2( 0.438838, 0.438838 )

[node name="Position2D" type="Position2D" parent="Node2D"]
position = Vector2( 36.4599, -4.76837e-07 )
scale = Vector2( 2.27875, 2.27875 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 64
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 47 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="stats" parent="." instance=ExtResource( 4 )]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -11.0
margin_top = -25.0
margin_right = 11.0
margin_bottom = -21.0
theme = SubResource( 35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 36 )
custom_styles/bg = SubResource( 37 )
max_value = 15.0
value = 15.0
percent_visible = false

[node name="ManaBar" type="ProgressBar" parent="."]
margin_left = -11.0
margin_top = -20.0
margin_right = 11.0
margin_bottom = -16.0
theme = SubResource( 39 )
custom_styles/fg = SubResource( 40 )
custom_styles/bg = SubResource( 41 )
max_value = 70.0
value = 70.0
percent_visible = false

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 46 )
anims/start = SubResource( 44 )
anims/stop = SubResource( 45 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PlayerRespawnTimer" type="Timer" parent="."]
autostart = true

[node name="No_Mana" type="Polygon2D" parent="."]
position = Vector2( 4.61539, 21.4 )
scale = Vector2( 1.38462, 1.2 )
color = Color( 0.0823529, 0.0784314, 0.0784314, 1 )
polygon = PoolVector2Array( 5, -23, 2.44444, -24.5, 7, -20, 27.7222, -20.3333, 27, -32, 5.33333, -31.1667 )

[node name="RichTextLabel" type="RichTextLabel" parent="No_Mana"]
margin_left = 5.72222
margin_top = -30.1667
margin_right = 31.7222
margin_bottom = -21.1667
custom_fonts/normal_font = SubResource( 48 )
text = "No Mana"

[node name="Timer" type="Timer" parent="No_Mana"]
autostart = true

[node name="On_Cooldown" type="Polygon2D" parent="."]
position = Vector2( -73, 25 )
scale = Vector2( 1.38462, 1.2 )
color = Color( 0.0823529, 0.0784314, 0.0784314, 1 )
polygon = PoolVector2Array( 5, -23, 2.44444, -24.5, 7, -20, 45.5, -20, 45.5, -30.8333, 5.33333, -31.1667 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="On_Cooldown"]
margin_left = 6.0
margin_top = -30.0
margin_right = 44.0
margin_bottom = -19.0
custom_fonts/normal_font = SubResource( 48 )
text = "It's not time yet"

[node name="Timer" type="Timer" parent="On_Cooldown"]
autostart = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerRespawnTimer" to="." method="_on_PlayerRespawnTimer_timeout"]
[connection signal="timeout" from="No_Mana/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="On_Cooldown/Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]
